# pico-adxl343

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
docs/: _a_d_x_l34x_8c.html  _a_d_x_l34x_8c.js  _a_d_x_l34x_8c__incl.map  _a_d_x_l34x_8c__incl.md5  _a_d_x_l34x_8h.html  _a_d_x_l34x_8h.js  _a_d_x_l34x_8h__dep__incl.map  _a_d_x_l34x_8h__dep__incl.md5  _a_d_x_l34x_8h__incl.map  _a_d_x_l34x_8h__incl.md5  _a_d_x_l34x_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _formulas.tex  annotated.html  annotated_dup.js  classes.html  dir_02360bd02ac1201056da1daa384a18e9.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_a29c40f963018cb07cfef91c641fb6cb.html  dir_cec8e168f1e0bdf00e3d8b7b7e67c75b.html  dir_dab6282177c64bb6a103c53496a1f1f1.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  graph_legend.html  group___a_d_x_l34_x.html  group___a_d_x_l34_x.js  index.html  modules.html  modules.js  navtreedata.js  navtreeindex0.js  (+9 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  groups_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  (+5 more)
doxygen/: Doxyfile
examples/: CMakeLists.txt  main.c
include/: ADXL343.h  ADXL343.hpp
src/: ADXL34x.c  ADXL34x.h
src/c/: adxl343.c
src/cpp/: adxl343.cpp
test/: CMakeLists.txt  README.md  test.c  test_smoke.c
